test/visibility/type-shadow.good
type-shadow.chpl:12: error: unresolved type specifier 'R(type int(64))'
type-shadow.chpl:11: note: this candidate did not match: R
type-shadow.chpl:12: note: because call includes 1 arguments
type-shadow.chpl:11: note: but function can only accept 0 arguments
type-shadow.chpl:12: note: did you forget the 'new' keyword?
